[package]
name = "simple_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
quote = "1.0.35"
simple_orm-derive = { version = "0.1.0", path = "simple_orm-derive" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
